changing bib and adding acknowledgement

--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,3 +1,6 @@
+We would like to thank Suzanne Aigrain for providing thoughtful insight that
+improved this paper.
+
 This work was partly developed at the 2019 KITP conference `Better stars,
 better planets'.
 This research was supported in part by the National Science Foundation under
