--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -17,8 +17,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{bailer-jones2018,
-       author = {{Bailer-Jones}, C.~A.~L. and {Rybizki}, J. and {Fouesneau}, M. and
-         {Mantelet}, G. and {Andrae}, R.},
+       author = {{Bailer-Jones}, C.~A.~L. and {Rybizki}, J. and {Fouesneau {\it et al}}, M.},
         title = "{Estimating Distance from Parallaxes. IV. Distances to 1.33 Billion Stars in Gaia Data Release 2}",
       journal = {\aj},
      keywords = {catalogs, Galaxy: structure, methods: statistical, stars: distances, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics},
@@ -109,16 +108,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{stardate_paper,
-       author = {{Angus}, R. and {Morton}, T., D. and {Foreman-Mackey}, D. and
-                {van Saders}, J. and {Curtis}, J., L. and {Kane}, S., R. and
-                {Bedell}, M. and {Kiman}, R. and {Hogg}, D. W. and {Brewer}, J.},
-        title = "{Towards precise stellar ages: combining isochrone fitting with empirical gyrochronology}",
-      journal = {\aj},
-     keywords = {methods: data analysis, stars: evolution, stars: low-mass, stars: magnetic field, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
 @ARTICLE{stardate,
        author = {{Angus}, R. and {Morton}, T., D. and {Foreman-Mackey}, D.},
         title = "{stardate: combining dating methods for better stellar ages}",
@@ -187,8 +176,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{curtis2019,
-   author = {{Curtis}, J.~L. and {Ag{\"u}eros}, M.~A. and {Douglas}, S.~T. and
-	{Meibom}, S.},
+   author = {{Curtis}, J.~L. and {Ag{\"u}eros}, M.~A. and {Douglas {\it et al}}, S.},
     title = "{A Temporary Epoch of Stalled Spin-Down for Low-Mass Stars: Insights from NGC 6811 with Gaia and Kepler}",
   journal = {arXiv e-prints},
 archivePrefix = "arXiv",
@@ -371,9 +359,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{nordstrom2004,
-   author = {{Nordstr{\"o}m}, B. and {Mayor}, M. and {Andersen}, J. and {Holmberg}, J. and
-	{Pont}, F. and {J{\o}rgensen}, B.~R. and {Olsen}, E.~H. and
-	{Udry}, S. and {Mowlavi}, N.},
+   author = {{Nordstr{\"o}m}, B. and {Mayor}, M. and {Andersen {\it et al}}, J.},
     title = "{The Geneva-Copenhagen survey of the Solar neighbourhood. Ages, metallicities, and kinematic properties of 14 000 F and G dwarfs}",
   journal = {\aap},
    eprint = {astro-ph/0405198},
@@ -476,8 +462,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{meibom2015,
-   author = {{Meibom}, S. and {Barnes}, S.~A. and {Platais}, I. and {Gilliland}, R.~L. and
-	{Latham}, D.~W. and {Mathieu}, R.~D.},
+   author = {{Meibom}, S. and {Barnes}, S.~A. and {Platais {\it et al}}, I.},
     title = "{A spin-down clock for cool stars from observations of a 2.5-billion-year-old cluster}",
   journal = {\nat},
 archivePrefix = "arXiv",
@@ -510,12 +495,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{meibom2011,
-   author = {{Meibom}, S. and {Barnes}, S.~A. and {Latham}, D.~W. and {Batalha}, N. and
-	{Borucki}, W.~J. and {Koch}, D.~G. and {Basri}, G. and {Walkowicz}, L.~M. and
-	{Janes}, K.~A. and {Jenkins}, J. and {Van Cleve}, J. and {Haas}, M.~R. and
-	{Bryson}, S.~T. and {Dupree}, A.~K. and {Furesz}, G. and {Szentgyorgyi}, A.~H. and
-	{Buchhave}, L.~A. and {Clarke}, B.~D. and {Twicken}, J.~D. and
-	{Quintana}, E.~V.},
+   author = {{Meibom}, S. and {Barnes}, S.~A. and {Latham {\it et al}}, D.~W.},
     title = "{The Kepler Cluster Study: Stellar Rotation in NGC 6811}",
   journal = {\apjl},
 archivePrefix = "arXiv",
@@ -533,8 +513,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{angus2015,
-   author = {{Angus}, R. and {Aigrain}, S. and {Foreman-Mackey}, D. and {McQuillan}, A.
-	},
+   author = {{Angus}, R. and {Aigrain}, S. and {Foreman-Mackey {\it et al}}, D.},
     title = "{Calibrating gyrochronology using Kepler asteroseismic targets}",
   journal = {\mnras},
 archivePrefix = "arXiv",
@@ -551,9 +530,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{vansaders2016,
-   author = {{van Saders}, J.~L. and {Ceillier}, T. and {Metcalfe}, T.~S. and
-	{Silva Aguirre}, V. and {Pinsonneault}, M.~H. and {Garc{\'{\i}}a}, R.~A. and
-	{Mathur}, S. and {Davies}, G.~R.},
+   author = {{van Saders}, J.~L. and {Ceillier}, T. and {Metcalfe {\it et al}}, T.~S.},
     title = "{Weakened magnetic braking as the origin of anomalously rapid rotation in old field stars}",
   journal = {\nat},
 archivePrefix = "arXiv",
@@ -584,8 +561,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{angus2018,
-       author = {{Angus}, Ruth and {Morton}, Timothy and {Aigrain}, Suzanne and
-         {Foreman-Mackey}, Daniel and {Rajpaul}, Vinesh},
+       author = {{Angus}, Ruth and {Morton}, Timothy and {Aigrain {\it et al}}, Suzanne},
         title = "{Inferring probabilistic stellar rotation periods using Gaussian processes}",
       journal = {\mnras},
      keywords = {methods: data analysis, methods: statistical, techniques: photometric, stars: rotation, stars: solar-type, starspots, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
@@ -603,9 +579,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{faherty2009,
-       author = {{Faherty}, Jacqueline K. and {Burgasser}, Adam J. and {Cruz}, Kelle L. and
-         {Shara}, Michael M. and {Walter}, Frederick M. and
-         {Gelino}, Christopher R.},
+       author = {{Faherty}, Jacqueline K. and {Burgasser}, Adam J. and {Cruz {\it et al}}, Kelle L.},
         title = "{The Brown Dwarf Kinematics Project I. Proper Motions and Tangential Velocities for a Large Sample of Late-Type M, L, and T Dwarfs}",
       journal = {\aj},
      keywords = {astrometry, stars: fundamental parameters, stars: low-mass, brown dwarfs, Astrophysics},
@@ -623,14 +597,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{west2011,
-       author = {{West}, Andrew A. and {Morgan}, Dylan P. and {Bochanski}, John J. and
-         {Andersen}, Jan Marie and {Bell}, Keaton J. and {Kowalski}, Adam F. and
-         {Davenport}, James R.~A. and {Hawley}, Suzanne L. and
-         {Schmidt}, Sarah J. and {Bernat}, David and {Hilton}, Eric J. and
-         {Muirhead}, Philip and {Covey}, Kevin R. and
-         {Rojas-Ayala}, B{\'a}rbara and {Schlawin}, Everett and {Gooding}, Mary and
-         {Schluns}, Kyle and {Dhital}, Saurav and {Pineda}, J. Sebastian and
-         {Jones}, David O.},
+       author = {{West}, Andrew A. and {Morgan}, Dylan P. and {Bochanski {\it et al}}, John J.},
         title = "{The Sloan Digital Sky Survey Data Release 7 Spectroscopic M Dwarf Catalog. I. Data}",
       journal = {\aj},
      keywords = {brown dwarfs, Galaxy: kinematics and dynamics, stars: abundances, stars: activity, stars: late-type, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
@@ -649,8 +616,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{brown2011,
-       author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett}, Mark E. and
-         {Esquerdo}, Gilbert A.},
+       author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett {\it et al}}, Mark E.},
         title = "{Kepler Input Catalog: Photometric Calibration and Stellar Classification}",
       journal = {\aj},
      keywords = {catalogs, methods: data analysis, surveys, techniques: photometric, Astrophysics - Solar and Stellar Astrophysics},
@@ -669,8 +635,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{douglas2019,
-       author = {{Douglas}, S.~T. and {Curtis}, J.~L. and {Ag{\"u}eros}, M.~A. and
-         {Cargile}, P.~A. and {Brewer}, J.~M. and {Meibom}, S. and {Jansen}, T.},
+       author = {{Douglas}, S.~T. and {Curtis}, J.~L. and {Ag{\"u}eros {\it et al}}, M.~A.},
         title = "{K2 Rotation Periods for Low-mass Hyads and a Quantitative Comparison of the Distribution of Slow Rotators in the Hyades and Praesepe}",
       journal = {\apj},
      keywords = {open clusters and associations: individual: Hyades, Praesepe, stars: evolution, stars: late-type, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
@@ -708,15 +673,25 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{angus2019,
-       author = {{Angus et al.}, Ruth},
-        title = "{Towards precise stellar ages: combining isochrone fitting
-            with empirical gyrochronology}",
+       author = {{Angus}, Ruth and {Morton}, Timothy D. and {Foreman-Mackey {\it et al}}, Daniel},
+        title = "{Toward Precise Stellar Ages: Combining Isochrone Fitting with Empirical Gyrochronology}",
       journal = {\aj},
-     keywords = {stars: activity, stars: evolution, stars: magnetic field, stars: rotation, stars: solar-type, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
-         year = "2019",
+     keywords = {Hertzsprung─Russell and C─M diagrams, methods: statistical, stars: evolution, stars: fundamental parameters, stars: low-mass, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2019,
+        month = nov,
+       volume = {158},
+       number = {5},
+          eid = {173},
+        pages = {173},
+          doi = {10.3847/1538-3881/ab3c53},
+archivePrefix = {arXiv},
+       eprint = {1908.07528},
  primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....158..173A},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+
 
 @ARTICLE{green2018,
        author = {{M. Green}, Gregory},
@@ -805,9 +780,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{casagrande2011,
-       author = {{Casagrande}, L. and {Sch{\"o}nrich}, R. and {Asplund}, M. and
-         {Cassisi}, S. and {Ram{\'\i}rez}, I. and {Mel{\'e}ndez}, J. and
-         {Bensby}, T. and {Feltzing}, S.},
+       author = {{Casagrande}, L. and {Sch{\"o}nrich}, R. and {Asplund {\it et al}}, M.},
         title = "{New constraints on the chemical evolution of the solar neighbourhood and Galactic disc(s). Improved astrophysical parameters for the Geneva-Copenhagen Survey}",
       journal = {\aap},
      keywords = {stars: abundances, stars: fundamental parameters, Hertzsprung-Russell and C-M diagrams, stars: kinematics and dynamics, Galaxy: disk, solar neighborhood, Astrophysics - Galaxy Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
@@ -826,9 +799,7 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{rebull2017,
-   author = {{Rebull}, L.~M. and {Stauffer}, J.~R. and {Hillenbrand}, L.~A. and
-	{Cody}, A.~M. and {Bouvier}, J. and {Soderblom}, D.~R. and {Pinsonneault}, M. and
-	{Hebb}, L.},
+   author = {{Rebull}, L.~M. and {Stauffer}, J.~R. and {Hillenbrand {\it et al}}, L.~A.},
     title = "{Rotation of Late-type Stars in Praesepe with K2}",
   journal = {\apj},
 archivePrefix = "arXiv",
@@ -847,8 +818,7 @@ archivePrefix = "arXiv",
 
 
 @ARTICLE{douglas2017,
-   author = {{Douglas}, S.~T. and {Ag{\"u}eros}, M.~A. and {Covey}, K.~R. and
-	{Kraus}, A.},
+   author = {{Douglas}, S.~T. and {Ag{\"u}eros}, M.~A. and {Covey {\it et al}}, K.~R.},
     title = "{Poking the Beehive from Space: K2 Rotation Periods for Praesepe}",
   journal = {\apj},
 archivePrefix = "arXiv",
@@ -866,9 +836,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{douglas2016,
-       author = {{Douglas}, S.~T. and {Ag{\"u}eros}, M.~A. and {Covey}, K.~R. and
-        {Cargile}, P.~A. and {Barclay}, T. and {Cody}, A. and {Howell},
-        S.~B. and {Kopytova}, T.},
+       author = {{Douglas}, S.~T. and {Ag{\"u}eros}, M.~A. and {Covey {\it et al}}, K.~R.},
         title = "{K2 Rotation Periods for Low-mass Hyads and the Implications for
         Gyrochronology}",
       journal = {\apj},
@@ -894,7 +862,7 @@ title={adrn/pyia: v0.2}, DOI={10.5281/zenodo.1228136}, abstractNote={a Python pa
 Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
 Archiveprefix = {arXiv},
-Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Greenfield}, P. and {Droettboom}, M. and {Bray}, E. and {Aldcroft}, T. and {Davis}, M. and {Ginsburg}, A. and {Price-Whelan}, A.~M. and {Kerzendorf}, W.~E. and {Conley}, A. and {Crighton}, N. and {Barbary}, K. and {Muna}, D. and {Ferguson}, H. and {Grollier}, F. and {Parikh}, M.~M. and {Nair}, P.~H. and {Unther}, H.~M. and {Deil}, C. and {Woillez}, J. and {Conseil}, S. and {Kramer}, R. and {Turner}, J.~E.~H. and {Singer}, L. and {Fox}, R. and {Weaver}, B.~A. and {Zabalza}, V. and {Edwards}, Z.~I. and {Azalee Bostroem}, K. and {Burke}, D.~J. and {Casey}, A.~R. and {Crawford}, S.~M. and {Dencheva}, N. and {Ely}, J. and {Jenness}, T. and {Labrie}, K. and {Lim}, P.~L. and {Pierfederici}, F. and {Pontzen}, A. and {Ptak}, A. and {Refsdal}, B. and {Servillat}, M. and {Streicher}, O.},
+Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud {\it et al}}, E.~J.},
 Doi = {10.1051/0004-6361/201322068},
 Eid = {A33},
 Eprint = {1307.6212},
@@ -946,8 +914,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{reinhold2019,
-       author = {{Reinhold}, Timo and {Bell}, Keaton J. and {Kuszlewicz}, James and
-         {Hekker}, Saskia and {Shapiro}, Alexander I.},
+       author = {{Reinhold}, Timo and {Bell}, Keaton J. and {Kuszlewicz {\it et al}}, James},
         title = "{Transition from spot to faculae domination. An alternate explanation for the dearth of intermediate Kepler rotation periods}",
       journal = {\aap},
      keywords = {stars: activity, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
@@ -984,12 +951,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{robin2012,
-       author = {{Robin}, A.~C. and {Luri}, X. and {Reyl{\'e}}, C. and {Isasi}, Y. and
-         {Grux}, E. and {Blanco-Cuaresma}, S. and {Arenou}, F. and
-         {Babusiaux}, C. and {Belcheva}, M. and {Drimmel}, R. and {Jordi}, C. and
-         {Krone-Martins}, A. and {Masana}, E. and {Mauduit}, J.~C. and
-         {Mignard}, F. and {Mowlavi}, N. and {Rocca-Volmerange}, B. and
-         {Sartoretti}, P. and {Slezak}, E. and {Sozzetti}, A.},
+       author = {{Robin}, A.~C. and {Luri}, X. and {Reyl{\'e} {\it et al}}, C.},
         title = "{Gaia Universe model snapshot. A statistical analysis of the expected contents of the Gaia catalogue}",
       journal = {\aap},
      keywords = {methods: data analysis, Galaxy: stellar content, catalogs, Galaxy: structure, galaxies: statistics, stars: statistics, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
@@ -1082,8 +1044,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{pinsonneault1989,
-   author = {{Pinsonneault}, M.~H. and {Kawaler}, S.~D. and {Sofia}, S. and
-	{Demarque}, P.},
+   author = {{Pinsonneault}, M.~H. and {Kawaler}, S.~D. and {Sofia {\it et al}}, S.},
     title = "{Evolutionary models of the rotating sun}",
   journal = {\apj},
  keywords = {Abundance, Solar Interior, Solar Rotation, Stellar Evolution, Stellar Models, Angular Velocity, Beryllium, Lithium, Periodic Variations, Solar Velocity, Stellar Rotation},
@@ -1097,8 +1058,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{matt2012,
-   author = {{Matt}, S.~P. and {MacGregor}, K.~B. and {Pinsonneault}, M.~H. and
-	{Greene}, T.~P.},
+   author = {{Matt}, S.~P. and {MacGregor}, K.~B. and {Pinsonneault {\it et al}}, M.~H.},
     title = "{Magnetic Braking Formulation for Sun-like Stars: Dependence on Dipole Field Strength and Rotation Rate}",
   journal = {\apjl},
 archivePrefix = "arXiv",
@@ -1166,13 +1126,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{howell2014,
-       author = {{Howell}, Steve B. and {Sobeck}, Charlie and {Haas}, Michael and
-         {Still}, Martin and {Barclay}, Thomas and {Mullally}, Fergal and
-         {Troeltzsch}, John and {Aigrain}, Suzanne and {Bryson}, Stephen T. and
-         {Caldwell}, Doug and {Chaplin}, William J. and {Cochran}, William D. and
-         {Huber}, Daniel and {Marcy}, Geoffrey W. and {Miglio}, Andrea and
-         {Najita}, Joan R. and {Smith}, Marcie and {Twicken}, J.~D. and
-         {Fortney}, Jonathan J.},
+       author = {{Howell}, Steve B. and {Sobeck}, Charlie and {Haas {\it et al}}, Michael},
         title = "{The K2 Mission: Characterization and Early Results}",
       journal = {\pasp},
      keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
@@ -1190,31 +1144,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{borucki2010,
-       author = {{Borucki}, William J. and {Koch}, David and {Basri}, Gibor and
-         {Batalha}, Natalie and {Brown}, Timothy and {Caldwell}, Douglas and
-         {Caldwell}, John and {Christensen-Dalsgaard}, J{\o}rgen and
-         {Cochran}, William D. and {DeVore}, Edna and {Dunham}, Edward W. and
-         {Dupree}, Andrea K. and {Gautier}, Thomas N. and {Geary}, John C. and
-         {Gilliland}, Ronald and {Gould}, Alan and {Howell}, Steve B. and
-         {Jenkins}, Jon M. and {Kondo}, Yoji and {Latham}, David W. and
-         {Marcy}, Geoffrey W. and {Meibom}, S{\o}ren and {Kjeldsen}, Hans and
-         {Lissauer}, Jack J. and {Monet}, David G. and {Morrison}, David and
-         {Sasselov}, Dimitar and {Tarter}, Jill and {Boss}, Alan and
-         {Brownlee}, Don and {Owen}, Toby and {Buzasi}, Derek and
-         {Charbonneau}, David and {Doyle}, Laurance and {Fortney}, Jonathan and
-         {Ford}, Eric B. and {Holman}, Matthew J. and {Seager}, Sara and
-         {Steffen}, Jason H. and {Welsh}, William F. and {Rowe}, Jason and
-         {Anderson}, Howard and {Buchhave}, Lars and {Ciardi}, David and
-         {Walkowicz}, Lucianne and {Sherry}, William and {Horch}, Elliott and
-         {Isaacson}, Howard and {Everett}, Mark E. and {Fischer}, Debra and
-         {Torres}, Guillermo and {Johnson}, John Asher and {Endl}, Michael and
-         {MacQueen}, Phillip and {Bryson}, Stephen T. and {Dotson}, Jessie and
-         {Haas}, Michael and {Kolodziejczak}, Jeffrey and {Van Cleve}, Jeffrey and
-         {Chandrasekaran}, Hema and {Twicken}, Joseph D. and
-         {Quintana}, Elisa V. and {Clarke}, Bruce D. and {Allen}, Christopher and
-         {Li}, Jie and {Wu}, Haley and {Tenenbaum}, Peter and
-         {Verner}, Ekaterina and {Bruhweiler}, Frederick and {Barnes}, Jason and
-         {Prsa}, Andrej},
+       author = {{Borucki}, William J. and {Koch}, David and {Basri {\it et al}}, Gibor},
         title = "{Kepler Planet-Detection Mission: Introduction and First Results}",
       journal = {Science},
      keywords = {ASTRONOMY},
@@ -1229,12 +1159,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{garcia2014,
-       author = {{Garc{\'\i}a}, R.~A. and {Ceillier}, T. and {Salabert}, D. and
-         {Mathur}, S. and {van Saders}, J.~L. and {Pinsonneault}, M. and
-         {Ballot}, J. and {Beck}, P.~G. and {Bloemen}, S. and {Campante}, T.~L. and
-         {Davies}, G.~R. and {do Nascimento}, J. -D., Jr. and {Mathis}, S. and
-         {Metcalfe}, T.~S. and {Nielsen}, M.~B. and {Su{\'a}rez}, J.~C. and
-         {Chaplin}, W.~J. and {Jim{\'e}nez}, A. and {Karoff}, C.},
+       author = {{Garc{\'\i}a}, R.~A. and {Ceillier}, T. and {Salabert {\it et al}}, D.},
         title = "{Rotation and magnetism of Kepler pulsating solar-like stars. Towards asteroseismically calibrated age-rotation relations}",
       journal = {\aap},
      keywords = {asteroseismology, stars: activity, stars: rotation, stars: solar-type, stars: evolution, stars: oscillations, Astrophysics - Solar and Stellar Astrophysics},
@@ -1271,14 +1196,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{thompson1996,
-       author = {{Thompson}, M.~J. and {Toomre}, J. and {Anderson}, E.~R. and
-         {Antia}, H.~M. and {Berthomieu}, G. and {Burtonclay}, D. and
-         {Chitre}, S.~M. and {Christensen-Dalsgaard}, J. and {Corbard}, T. and
-         {De Rosa}, M. and {Genovese}, C.~R. and {Gough}, D.~O. and
-         {Haber}, D.~A. and {Harvey}, J.~W. and {Hill}, F. and {Howe}, R. and
-         {Korzennik}, S.~G. and {Kosovichev}, A.~G. and {Leibacher}, J.~W. and
-         {Pijpers}, F.~P. and {Provost}, J. and {Rhodes}, E.~J., Jr. and
-         {Schou}, J. and {Sekii}, T. and {Stark}, P.~B. and {Wilson}, P.~R.},
+       author = {{Thompson}, M.~J. and {Toomre}, J. and {Anderson {\it et al}}, E.~R.},
         title = "{Differential Rotation and Dynamics of the Solar Interior}",
       journal = {Science},
          year = 1996,
@@ -1310,8 +1228,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{brown2011,
-       author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett}, Mark E. and
-         {Esquerdo}, Gilbert A.},
+       author = {{Brown}, Timothy M. and {Latham}, David W. and {Everett {\it et al}}, Mark E.},
         title = "{Kepler Input Catalog: Photometric Calibration and Stellar Classification}",
       journal = {\aj},
      keywords = {catalogs, methods: data analysis, surveys, techniques: photometric, Astrophysics - Solar and Stellar Astrophysics},
@@ -1330,8 +1247,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{kiman2019,
-       author = {{Kiman}, Rocio and {Schmidt}, Sarah J. and {Angus}, Ruth and
-         {Cruz}, Kelle L. and {Faherty}, Jacqueline K. and {Rice}, Emily},
+       author = {{Kiman}, Rocio and {Schmidt}, Sarah J. and {Angus {\it et al}}, Ruth},
         title = "{Exploring the Age-dependent Properties of M and L Dwarfs Using Gaia and SDSS}",
       journal = {\aj},
      keywords = {stars: activity, stars: kinematics and dynamics, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
@@ -1366,8 +1282,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{berger2020,
-       author = {{Berger}, Travis A. and {Huber}, Daniel and {van Saders}, Jennifer L. and
-         {Gaidos}, Eric and {Tayar}, Jamie and {Kraus}, Adam L.},
+       author = {{Berger}, Travis A. and {Huber}, Daniel and {van Saders {\it et al}}, Jennifer L.},
         title = "{The $Gaia$-$Kepler$ Stellar Properties Catalog I: Homogeneous Fundamental Properties for 186,000 $Kepler$ Stars}",
       journal = {arXiv e-prints},
      keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Astrophysics of Galaxies},
@@ -1383,15 +1298,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{boyajian2012,
-       author = {{Boyajian}, Tabetha S. and {von Braun}, Kaspar and {van Belle}, Gerard and
-         {McAlister}, Harold A. and {ten Brummelaar}, Theo A. and
-         {Kane}, Stephen R. and {Muirhead}, Philip S. and {Jones}, Jeremy and
-         {White}, Russel and {Schaefer}, Gail and {Ciardi}, David and
-         {Henry}, Todd and {L{\'o}pez-Morales}, Mercedes and {Ridgway}, Stephen and
-         {Gies}, Douglas and {Jao}, Wei-Chun and {Rojas-Ayala}, B{\'a}rbara and
-         {Parks}, J. Robert and {Sturmann}, Laszlo and {Sturmann}, Judit and
-         {Turner}, Nils H. and {Farrington}, Chris and {Goldfinger}, P.~J. and
-         {Berger}, David H.},
+       author = {{Boyajian}, Tabetha S. and {von Braun}, Kaspar and {van Belle {\it et al}}, Gerard},
         title = "{Stellar Diameters and Temperatures. II. Main-sequence K- and M-stars}",
       journal = {\apj},
      keywords = {Hertzsprung-Russell and C-M diagrams, infrared: stars, planetary systems, stars: atmospheres, stars: fundamental parameters, stars: general, stars: late-type, stars: low-mass, techniques: high angular resolution, techniques: interferometric, Astrophysics - Solar and Stellar Astrophysics},
@@ -1409,10 +1316,8 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{mann2015,
-       author = {{Mann}, Andrew W. and {Feiden}, Gregory A. and {Gaidos}, Eric and
-         {Boyajian}, Tabetha and {von Braun}, Kaspar},
+       author = {{Mann}, Andrew W. and {Feiden}, Gregory A. and {Gaidos {\it et al}}, Eric},
         title = "{How to Constrain Your M Dwarf: Measuring Effective Temperature, Bolometric Luminosity, Mass, and Radius}",
       journal = {\apj},
      keywords = {planetary systems, stars: abundances, stars: fundamental parameters, stars: late-type, stars: low-mass, stars: statistics, Astrophysics - Solar and Stellar Astrophysics},
@@ -1432,8 +1337,7 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{brewer2016,
-       author = {{Brewer}, John M. and {Fischer}, Debra A. and {Valenti}, Jeff A. and
-         {Piskunov}, Nikolai},
+       author = {{Brewer}, John M. and {Fischer}, Debra A. and {Valenti {\it et al}}, Jeff A.},
         title = "{Spectral Properties of Cool Stars: Extended Abundance Analysis of 1,617 Planet-search Stars}",
       journal = {\apjs},
      keywords = {catalogs, methods: data analysis, stars: abundances, stars: fundamental parameters, stars: solar type, techniques: spectroscopic, Astrophysics - Solar and Stellar Astrophysics},
@@ -1452,9 +1356,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{newton2016,
-       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau}, David and
-         {Berta-Thompson}, Zachory K. and {Dittmann}, Jason A. and
-         {West}, Andrew A.},
+       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau {\it et al}}, David},
         title = "{The Rotation and Galactic Kinematics of Mid M Dwarfs in the Solar Neighborhood}",
       journal = {\apj},
      keywords = {stars: kinematics and dynamics, stars: low-mass, stars: rotation, starspots, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
@@ -1472,10 +1374,8 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{newton2018,
-       author = {{Newton}, Elisabeth R. and {Mondrik}, Nicholas and {Irwin}, Jonathan and
-         {Winters}, Jennifer G. and {Charbonneau}, David},
+       author = {{Newton}, Elisabeth R. and {Mondrik}, Nicholas and {Irwin {\it et al}}, Jonathan},
         title = "{New Rotation Period Measurements for M Dwarfs in the Southern Hemisphere: An Abundance of Slowly Rotating, Fully Convective Stars}",
       journal = {\aj},
      keywords = {stars: individual: Proxima Centauri, Wolf 359, GJ 1286, stars: low-mass, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
@@ -1495,8 +1395,7 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{newton2017,
-       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau}, David and
-         {Berlind}, Perry and {Calkins}, Michael L. and {Mink}, Jessica},
+       author = {{Newton}, Elisabeth R. and {Irwin}, Jonathan and {Charbonneau {\it et al}}, David},
         title = "{The H{\ensuremath{\alpha}} Emission of Nearby M Dwarfs and its Relation to Stellar Rotation}",
       journal = {\apj},
      keywords = {stars: activity, stars: low-mass, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
@@ -1516,10 +1415,7 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{rabus2019,
-       author = {{Rabus}, Markus and {Lachaume}, R{\'e}gis and {Jord{\'a}n}, Andr{\'e}s and
-         {Brahm}, Rafael and {Boyajian}, Tabetha and {von Braun}, Kaspar and
-         {Espinoza}, N{\'e}stor and {Berger}, Jean-Philippe and
-         {Le Bouquin}, Jean-Baptiste and {Absil}, Olivier},
+       author = {{Rabus}, Markus and {Lachaume}, R{\'e}gis and {Jord{\'a}n {\it et al}}, Andr{\'e}s},
         title = "{A discontinuity in the T$_{eff}$-radius relation of M-dwarfs}",
       journal = {\mnras},
      keywords = {techniques: interferometric, stars: fundamental parameters, stars: late-type, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
@@ -1537,8 +1433,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{noyes1984,
-       author = {{Noyes}, R.~W. and {Hartmann}, L.~W. and {Baliunas}, S.~L. and
-         {Duncan}, D.~K. and {Vaughan}, A.~H.},
+       author = {{Noyes}, R.~W. and {Hartmann}, L.~W. and {Baliunas {\it et al}}, S.~L.},
         title = "{Rotation, convection, and magnetic activity in lower main-sequence stars.}",
       journal = {\apj},
      keywords = {Magnetic Stars, Main Sequence Stars, Stellar Activity, Stellar Magnetic Fields, Stellar Rotation, Chromosphere, Convection, Late Stars, Magnetoactivity, Astrophysics},
@@ -1567,7 +1462,6 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{parker1970,
        author = {{Parker}, E.~N.},
         title = "{The Generation of Magnetic Fields in Astrophysical Bodies. I. The Dynamo Equations}",
@@ -1582,9 +1476,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{west2008,
-       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski}, John J. and
-         {Covey}, Kevin R. and {Reid}, I. Neill and {Dhital}, Saurav and
-         {Hilton}, Eric J. and {Masuda}, Michael},
+       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Bochanski {\it et al}}, John J.},
         title = "{Constraining the Age-Activity Relation for Cool Stars: The Sloan Digital Sky Survey Data Release 5 Low-Mass Star Spectroscopic Sample}",
       journal = {\aj},
      keywords = {solar neighborhood, Galaxy: kinematics and dynamics, Galaxy: structure, stars: activity, stars: late-type, stars: low-mass, brown dwarfs, Astrophysics},
@@ -1603,9 +1495,7 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{bird2013,
-       author = {{Bird}, Jonathan C. and {Kazantzidis}, Stelios and {Weinberg}, David H. and
-         {Guedes}, Javiera and {Callegari}, Simone and {Mayer}, Lucio and
-         {Madau}, Piero},
+       author = {{Bird}, Jonathan C. and {Kazantzidis}, Stelios and {Weinberg {\it et al}}, David H.},
         title = "{Inside out and Upside down: Tracing the Assembly of a Simulated Disk Galaxy Using Mono-age Stellar Populations}",
       journal = {\apj},
      keywords = {galaxies: evolution, galaxies: spiral, Galaxy: evolution, Galaxy: formation, Galaxy: kinematics and dynamics, Galaxy: structure, Astrophysics - Astrophysics of Galaxies},
@@ -1624,10 +1514,7 @@ archivePrefix = {arXiv},
 }
 
 @ARTICLE{sandquist2016,
-       author = {{Sandquist}, Eric L. and {Jessen-Hansen}, J. and {Shetrone}, Matthew D. and
-         {Brogaard}, Karsten and {Meibom}, S{\o}ren and {Leitner}, Marika and
-         {Stello}, Dennis and {Bruntt}, Hans and {Antoci}, Victoria and
-         {Orosz}, Jerome A. and {Grundahl}, Frank and {Frandsen}, S{\o}ren},
+       author = {{Sandquist}, Eric L. and {Jessen-Hansen}, J. and {Shetrone {\it et al}}, Matthew D.},
         title = "{The Age and Distance of the Kepler Open Cluster NGC 6811 from an Eclipsing Binary, Turnoff Star Pulsation, and Giant Asteroseismology}",
       journal = {\apj},
      keywords = {asteroseismology, binaries: eclipsing, binaries: spectroscopic, open clusters and associations: individual: NGC 6811, stars: distances, stars: variables: delta Scuti, Astrophysics - Solar and Stellar Astrophysics},
@@ -1645,10 +1532,9 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{denissenkov2010,
        author = {{Denissenkov}, Pavel A. and {Pinsonneault}, Marc and
-         {Terndrup}, Donald M. and {Newsham}, Grant},
+         {Terndrup {\it et al}}, Donald M.},
         title = "{Angular Momentum Transport in Solar-type Stars: Testing the Timescale for Core-Envelope Coupling}",
       journal = {\apj},
      keywords = {stars: evolution, stars: interiors, Sun: rotation, Astrophysics - Solar and Stellar Astrophysics},
@@ -1734,10 +1620,8 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{spada2011,
-       author = {{Spada}, F. and {Lanzafame}, A.~C. and {Lanza}, A.~F. and {Messina}, S. and
-         {Collier Cameron}, A.},
+       author = {{Spada}, F. and {Lanzafame}, A.~C. and {Lanza {\it et al}}, A.~F.},
         title = "{Modelling the rotational evolution of solar-like stars: the rotational coupling time-scale}",
       journal = {\mnras},
      keywords = {methods: numerical, stars: interiors, stars: late-type, stars: pre-main-sequence, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
@@ -1753,7 +1637,6 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2011MNRAS.416..447S},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @ARTICLE{bouvier2008,
        author = {{Bouvier}, J.},
@@ -1773,11 +1656,8 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @ARTICLE{irwin2007,
-       author = {{Irwin}, Jonathan and {Hodgkin}, Simon and {Aigrain}, Suzanne and
-         {Hebb}, Leslie and {Bouvier}, Jerome and {Clarke}, Cathie and
-         {Moraux}, Estelle and {Bramich}, D.~M.},
+       author = {{Irwin}, Jonathan and {Hodgkin}, Simon and {Aigrain {\it et al}}, Suzanne},
         title = "{The Monitor project: rotation of low-mass stars in the open cluster NGC2516}",
       journal = {\mnras},
      keywords = {techniques: photometric, surveys, stars: rotation, open clusters and associations: individual: NGC2516, Astrophysics},
@@ -1794,11 +1674,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
     Adsurl = {https://ui.adsabs.harvard.edu/#abs/2018AJ....156..123T},
-    Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {VanderPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and {de Val-Borro}, M. and {Paper Contributors}, (Primary and {Aldcroft}, T.~L. and {Cruz}, K.~L. and {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Coordination Committee}, (Astropy and {Ardelean}, C. and {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and {Corrales}, L. and {Crichton}, D. and {D{\textquoteright}Avella}, D. and {Deil}, C. and {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and {Zabalza}, V. and {Contributors}, (Astropy)},
+    Author = {{Price-Whelan}, A.~M. and {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther {\it et al}}, H.~M.},
     doi = {10.3847/1538-3881/aabc4f},
     Eid = {123},
     Journal = {\aj},
@@ -1810,4 +1689,3 @@ archivePrefix = {arXiv},
     Volume = {156},
     Year = 2018,
     Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
-
